<resources>
    <string name="com_cypay_paysdk_loading">Loading...</string>
    <string name="com_mobogenie_paysdk_no_connection">Check Your Network Connection</string>
    <string name="com_mobogenie_paysdk_network_err">Network Error</string>
    <string name="com_mobogenie_paysdk_signing">Login</string>
    <string name="com_mobogenie_paysdk_pay_err">Sorry, You Cannot Pay Now. Please Try Later.</string>
    <string name="com_mobogenie_paysdk_login_failed">Failed</string>
    <string name="com_mobogenie_paysdk_loading">Loading...</string>
    <string name="com_mobogenie_paysdk_in_progress">Processing</string>
    <string name="com_mobogenie_paysdk_mimo_tip">Use %1$s to pay %2$d %3$s?</string>
    <string name="com_mobogenie_paysdk_mimo_tip_phone">Use the specified %2$s number to pay Rp %1$s?</string>
    <string name="com_mobogenie_paysdk_mimo_tip_phone_tax">Use the specified %3$s amount to pay Rp %1$s? Tax is 10%%, total amount is Rp %2$s.</string>
    <string name="com_mobogenie_paysdk_mimo_tip_phone_info">Type:</string>
    <string name="com_mobogenie_paysdk_mimo_error_amount">Error: Incorrect Amount</string>
    <string name="com_mobogenie_paysdk_type_of_card">Card Type:</string>
    <string name="com_mobogenie_paysdk_mimo_atm">Please use Kode Perusahaan and pay by ATM</string>
    <string name="com_mobogenie_paysdk_mimo_upoint">Please send SMS [%1$s] to %2$s for payment.</string>
    <string name="com_mobogenie_paysdk_mimo_xl">Sent to your mobile phone already, ordered is %1$s. Please reply as recommended in SMS.</string>
    <string name="com_mobogenie_paysdk_mimo_upoint_tips">Please input the [up %1$s] below to pay using your own number.</string>
    <string name="com_mobogenie_paysdk_mimo_upoint_tips_info">If success, the payment will deduct your balance automatically</string>
    <string name="com_mobogenie_paysdk_mimo_upoint_tips_2">The Verification Code is [%1$s]. Copy [%2$s] and send SMS to %3$s. </string>
    <string name="com_mobogenie_paysdk_mimo_voucher_tips">Please enter correct secret key. Attention: please make sure the amount of pin is same as item price.</string>
    <string name="com_mobogenie_paysdk_mimo_upoint_tips_error">Please enter the correct verification code.</string>
    <string name="com_mobogenie_paysdk_channels_itemname">YOU CAN GET %1$s</string>
    <string name="com_mobogenie_paysdk_channels_error_nochannels">Sorry, this item cannot be supported by any payment method.</string>
    <string name="com_mobogenie_paysdk_pay_error">Transaction Unsuccessful.</string>
    <string name="com_mobogenie_paysdk_pay_success">You have made a successful payment.</string>
    <string name="com_mobogenie_paysdk_pay_securepayment">SECURE PAYMENT</string>
    <string name="com_mobogenie_paysdk_channels_mycard_input_pin">Enter MyCard code</string>
    <string name="com_mobogenie_paysdk_channels_mycard_input_password">Enter password</string>
    <string name="com_mobogenie_paysdk_channels_mycard_input_null">code or password is null</string>
    <string name="com_cypay_paysdk_channels_mol_pin_no">Card PIN Number</string>
    <string name="com_cypay_paysdk_channels_mol_serial_no">Card Serial Number</string>
    <string name="com_cypay_paysdk_channels_mol_verify">Verify</string>
    <string name="com_cypay_paysdk_channels_mol_serial_empty">Please Input Serial No .</string>
    <string name="com_cypay_paysdk_channels_mol_pin_empty">Please Input Pin No .</string>
    <string name="com_cypay_input_payment">PAYMENT:</string>
    <string name="com_cypay_input_tips_type1">You’ve selected %1$s payment, insert your phone number below:</string>
    <string name="com_cypay_input_tips_type2">You’ve selected %1$s payment, insert your pin below:</string>
    <string name="com_cypay_input_et_hint1_cardnumber">Card Serial Number</string>
    <string name="com_cypay_input_et_hint2_pw">PIN ..</string>
    <string name="com_cypay_input_et_hint3_phone">Enter Phone Number</string>
    <string name="com_cypay_input_btn_pay">Pay</string>
    <string name="com_cypay_input_btn_cancel">Cancel</string>
    <string name="com_cypay_paysdk_channels_indomog_secret_code">Scratch Code</string>
    <string name="com_cypay_paysdk_channels_indomog_serial_empty">Please Input Scratch Code .</string>
    <string name="com_mobogenie_paysdk_channels_item_balance">BALANCE </string>
    <string name="com_cypay_paysdk_payment_finished">Finished</string>
    <string name="com_cypay_paysdk_payemnt_cancel">Cancel</string>
    <string name="com_mobogenie_paysdk_mimo_upoint_tips_info_2">Please confirm recharge is successful, then press the button to confirm payment.</string>
    <string name="com_cypay_paysdk_ngnotice">Please input Card serial number and Card pin number</string>
    <string name="com_cypay_paysdk_mimopay_error_code_tip">Pin code is used or unavailable</string>
    <string name="com_cypay_paysdk_mimopay_error_phone_no">Phone number entered is unavailable</string>
    <string name="com_cypay_paysdk_login_tip">Existing User Login </string>
    <string name="com_cypay_paysdk_user_name">UserName</string>
    <string name="com_cypay_paysdk_new_pwd">Password</string>
    <string name="com_cypay_paysdk_retype_pwd">Retype Password</string>
    <string name="com_cypay_paysdk_create_user">Register</string>
    <string name="com_cypay_paysdk_cc_month">Month</string>
    <string name="com_cypay_paysdk_cc_year">Year</string>
    <string name="com_cypay_paysdk_cc_cvv">CVV</string>
    <string name="com_cypay_paysdk_cc_number">Credit Card Number</string>
    <string name="com_cypay_paysdk_cc_payment_tip">Pay via Credit Card</string>
    <string name="com_cypay_paysdk_cc_pwd_tip">Step 1: \nPlease complete card no. for verification：</string>
    <string name="com_cypay_paysdk_cc_new_pwd">New Password</string>
    <string name="com_cypay_paysdk_cc_retype_pwd">Retype New Password</string>
    <string name="com_cypay_paysdk_cc_userid">ID:</string>
    <string name="com_cypay_paysdk_cc_need_pwd">Remember Password for your next purchase? </string>
    <string name="com_cypay_paysdk_cc_never">Yes</string>
    <string name="com_cypay_paysdk_cc_thirty_min">Yes, for 30mins</string>
    <string name="com_cypay_paysdk_cc_everytime">Never</string>
    <string name="com_cypay_paysdk_cc_agree"><u>Terms and Conditions</u></string>
    <string name="com_cypay_paysdk_find_cvv">Card CVV is right here</string>
    <string name="com_cypay_paysdk_verify_cc_error">Verification failed， please check card info</string>
    <string name="com_cypay_paysdk_request_bounds_card_err">Failed, check connection &amp; try again</string>
    <string name="com_cypay_paysdk_payment_err">Payment Failed，Check Connection</string>
    <string name="com_cypay_paysdk_login_bind_err">Login Fail，Check Connection</string>
    <string name="com_cypay_paysdk_subimt">Submit</string>
    <string name="com_cypay_paysdk_goto_pay">Pay</string>
    <string name="com_cypay_paysdk_retry">Retry</string>
    <string name="com_cypay_paysdk_payment_success">Payment Success</string>
    <string name="com_cypay_paysdk_retreive_pwd">Password Reset</string>
    <string name="com_cypay_paysdk_bind_card_fail">Failed, Please Check Connection</string>
    <string name="com_cypay_paysdk_pwd_retype_rule">This will be your new payment password</string>
    <string name="com_cypay_paysdk_pwd_different">Password not match, please try again</string>
    <string name="com_cypay_paysdk_card_input">Complete Card Info</string>
    <string name="com_cypay_paysdk_bind_card_success">Done, Congratulations!</string>
    <string name="com_cypay_paysdk_give_up">Don\'t link your bank card?</string>
    <string name="com_cypay_paysdk_give_up_register">Don\'t Register?</string>
    <string name="com_cypay_paysdk_unbind_card_tip">Unlink card ending with %1$s ?</string>
    <string name="com_cypay_paysdk_enter_pwd_tip">Please enter your password:</string>
    <string name="com_cypay_paysdk_empty_bind_card">Add a new card to continue payment</string>
    <string name="com_cypay_paysdk_yes">Yes</string>
    <string name="com_cypay_paysdk_no">No</string>
    <string name="com_cypay_paysdk_add_credit_card">+ Pay with another Card</string>
    <string name="com_cypay_paysdk_received_someting">You have received %1$s</string>
    <string name="com_cypay_paysdk_sign_s_bind_fail">Sign up success,But bind card failed.Reason:</string>
	<string name="com_cypay_paysdk_change_pwd_success">Successful !</string>
	<string name="com_cypay_paysdk_topup_my_wallet">RECHARGE WALLET</string>
	<string name="com_mobogenie_paysdk_channels_item_my_wallet">WALLET BALANCE</string>
    <string name="com_cypay_paysdk_genies">CENTS</string>
    <string name="com_cypay_paysdk_genies_need">(%1$s CENTS)</string>
    <string name="com_cypay_paysdk_bind_cc_title">Registration</string>
	<string name="com_cypay_paysdk_bind_cc">Register and receive %1$s FREE CENTS! To use in your next purchase.</string>
    <string name="com_cypay_paysdk_pwd_rule">Enter 6-20 characters</string>
    <string name="com_cypay_paysdk_cc_pwd_tip_two">Step 2: \nEnter new 6-20 characters password：</string>
    <string name="com_cypay_paysdk_balance_not_enough">Insufficient Cents, recharge?</string>
    <string name="com_cypay_paysdk_username_rule">Enter 3-15 characters</string>
    <string name="com_cypay_paysdk_unconfumed_tip">Purchase Error. Amount added to your Wallet Balance.</string>
    <string name="com_cypay_paysdk_part_payment_error">Amount you spent is not enough, the balance will be transferred to your Wallet. Use your Wallet to pay.</string>
    <string name="com_cypay_paysdk_balance_tip">Surplus amount is transferred to your Wallet balance</string>
	<string name="com_cypay_paysdk_need_genies">Required Amount</string>
	<string name="com_cypay_paysdk_available_balance">Current Balance</string>
	<string name="com_cypay_paysdk_recharge_unsuccessful">Recharge Unsuccessful.</string>
	<string name="com_cypay_paysdk_recharge_successful">Recharge Successful.</string>
	<string name="com_cypay_paysdk_recharge_processing">Processing, please wait…</string>
	<string name="com_cypay_paysdk_string_wrong_password">Wrong Password</string>
	<string name="com_cypay_paysdk_string_password_not_match">6-20 digits containing numbers or letters</string>
	<string name="com_cypay_paysdk_string_username_not_match">3-15 digits containing numbers or letters</string>
	<string name="com_cypay_paysdk_string_twopassword_not_match">Passwords does not match</string>
	<string name="com_cypay_paysdk_string_email_not_match">Email do not match</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_username_hint">UserName(3-15 characters)</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_password_hint">Password(6-20 characters)</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_retype_password_hint">Retype Password</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_email_hint">Email</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_regist_notice">Used for password recovery.</string>
    <string name="com_cypay_paysdk_string_manageaccountfragment_regist_btn">Register</string>
	<string name="com_cypay_paysdk_string_securityfragment_old_password_hint">Old Password(6-20 characters)</string>
    <string name="com_cypay_paysdk_string_securityfragment_new_password_hint">New Password(6-20 characters)</string>
    <string name="com_cypay_paysdk_string_securityfragment_retype_password_hint">Retype Password</string>
    <string name="com_cypay_paysdk_string_securityfragment_change_password_btn">Change Password</string>
    <string name="com_cypay_paysdk_string_forgot_pwd">Forgot?</string>
    <string name="com_cypay_paysdk_username_rule_bindcreditcard">UserName(3-15 characters)</string>
    <string name="com_cypay_paysdk_pwd_rule_bindcreditcard">Password(6-20 characters)</string>
    <string name="com_cypay_paysdk_retype_pwd_rule_bindcreditcard">Retype Password</string>
</resources>