<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

     
     <LinearLayout 
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginBottom="0dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_height="wrap_content"
         >
        <EditText 
        android:id="@+id/old_password"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:password="true"
        android:layout_width="fill_parent"
        android:maxLength="20"
        android:layout_height="wrap_content"
        android:hint="@string/com_cypay_paysdk_string_securityfragment_old_password_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
        <TextView 
            android:id="@+id/forget_tv"
            android:textSize="@dimen/com_cypay_paysdk_findpassword_forget_font_size"
            android:textColor="@color/com_cypay_paysdk_forget_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_cypay_paysdk_string_forgot_pwd"
            />
     </LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout 
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
        <EditText 
        android:id="@+id/new_password"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:maxLength="20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:hint="@string/com_cypay_paysdk_string_securityfragment_new_password_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        />
        
    </LinearLayout>
   
    <LinearLayout 
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
      
        <EditText 
        android:id="@+id/reenter_password"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        android:maxLength="20"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:singleLine="true"
        android:hint="@string/com_cypay_paysdk_string_securityfragment_retype_password_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:imeOptions="actionDone"
        />
        
        
    </LinearLayout>
    

      
    
     <LinearLayout 
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
         
    
         <Button 
        android:id="@+id/update_btn"
        android:text="@string/com_cypay_paysdk_string_securityfragment_change_password_btn"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/com_cypay_paysdk_all_button_font_size"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/com_cypay_paysdk_all_button_height"
        android:background="@drawable/com_cypay_paysdk_dialog_pay_btn"
        />
         
         
     </LinearLayout>
       
    
</LinearLayout>