<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:scrollbars="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    
    <LinearLayout 
        android:id="@+id/name_linear"
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >
    
    <EditText 
        android:id="@+id/username"
        android:singleLine="true"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:layout_width="fill_parent"
        android:maxLength="15"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_height="wrap_content"
        android:hint="@string/com_cypay_paysdk_string_manageaccountfragment_username_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        />
   
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/password_linear"
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >
        
     
        
        <EditText 
        android:id="@+id/password"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLength="20"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:hint="@string/com_cypay_paysdk_string_manageaccountfragment_password_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        />
        
      
        
    </LinearLayout>
   
    <LinearLayout 
        android:id="@+id/confirm_linear"
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >
        
        
        <EditText 
        android:id="@+id/confirm_pwd"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLength="20"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:hint="@string/com_cypay_paysdk_string_manageaccountfragment_retype_password_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        />
        
    </LinearLayout>
    
    
       <LinearLayout 
        android:id="@+id/email_linear"
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginBottom="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >

        
        <EditText 
        android:id="@+id/email"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_weight="8.0"
        android:layout_height="wrap_content"
        android:hint="@string/com_cypay_paysdk_string_manageaccountfragment_email_hint"
        android:background="@drawable/com_cypay_paysdk_edittext_bg"
        android:textSize="@dimen/com_cypay_paysdk_all_edit_font_size"
        />
        
        
    </LinearLayout>
    
       <LinearLayout 
       android:id="@+id/notice_linear"
       android:layout_marginLeft="14dp"
       android:layout_marginRight="10dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="top"
       >
        
        <TextView 
        android:visibility="gone"
        android:textSize="@dimen/com_cypay_paysdk_all_notice_text_font_size"
        android:text="@string/com_cypay_paysdk_string_manageaccountfragment_regist_notice"
        android:textColor="@color/com_cypay_paysdk_usercenter_content_black"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
        
               
        </LinearLayout>
      
    
     <LinearLayout 
        android:id="@+id/btn_linear"
        style="@style/com_cypay_paysdk_layout_style_margin"
        android:layout_marginTop="40dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
         
         <Button 
        android:id="@+id/submit_btn"
        android:text="@string/com_cypay_paysdk_string_manageaccountfragment_regist_btn"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/com_cypay_paysdk_all_button_font_size"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/com_cypay_paysdk_dialog_pay_btn"
        />
         
         
     </LinearLayout>
       
        </LinearLayout>
        
    
</ScrollView>